# teo-ffi

./: .gitignore  Cargo.toml  README.md  example.c  example.h  schema.teo
src/: lib.rs
