[package]
name = "teo-ffi"
description = "FFI for interacting with Teo."
version = "0.0.1"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
teo = { path = "../teo" }
to-mut = { version = "0.1.0" }
tokio = { version = "1.24.1" }
once_cell = { version = "1.17.0" }
